# lipaboyLibrary

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.6adec8a.4.8-pre1  README.md  TODO
Compile/: Lipaboy_Library_test
TestResults/de36019f-4019-4dec-9a85-f505de004846/: castiel_CASTIEL-PC 2019-08-27 21_41_18.coverage
intervals/: cubesegment.h  interval.h  rectsegment.h  segment.h
maths/: line2d.h  matrix4x4.cpp  matrix4x4.h  point2d.h  rotateoperator.cpp  rotateoperator.h  vector2d.h  vector3d.h  vector4d.cpp  vector4d.h  wireframemaths.h
src/: CMakeLists.txt  lipaboy_test.cpp  lipaboy_test.h
src/common/: comparable.h  either_comparable.h
src/common_interfaces/: algebra.h  another_type_comparing_extender.h  comparable.h  comparator_extender.h  containable.h  either_comparable.h
src/containers/: bit_container.h  bit_vector.h  nested_containers.h
src/extra_tools/: detect_time_duration.h  extra_tools.h  initializer_list_iterator.h  maths_tools.h  producing_iterator.h  sequence_producing_iterator.h
src/hash_map/: forward_list_storaged_size.h  hash_map.h
src/intervals/: containable.h  cubesegment.h  cutoffborders.h  either_comparable.h  interval.h  interval_set.h  iplenty.h  numerical_interval.h  rectsegment.h  segment.h
src/long_numbers/: benchmarks_results.txt  big_integer.cpp  big_integer.h  big_integer_algorithms.cpp  big_integer_algorithms.h  big_integer_library.h  big_integer_utils.cpp  big_integer_utils.h  big_unsigned.cpp  big_unsigned.h  big_unsigned_in_a_base.cpp  big_unsigned_in_a_base.h  big_unsigned_view.h  i_big_number.h  long_integer.h  long_integer_any_numeration.h  long_integer_decimal.h  long_integer_decimal_view.h  long_number.cpp  long_number.h  long_number_base.h  long_unsigned.h  number_like_array.h  sample.cpp  testsuite.cpp
src/long_numbers/big_integer/: big_integer_algorithms.cpp  big_integer_library.h  big_unsigned.cpp  big_unsigned.h  big_unsigned_in_a_base.cpp
src/maths/: accuracy_fixed_number.h  accuracy_number.h  accuracy_number_can_throw.h  fixed_precision_number.h  line2d.h  matrix4x4.cpp  matrix4x4.h  point2d.h  precision_number.h  precision_number_can_throw.h  rotateoperator.cpp  rotateoperator.h  vector2d.h  vector3d.h  vector4d.cpp  vector4d.h
src/numberphile/: .Results.txt.kate-swp  Results.txt  long_digits_multiplication_searching.cpp  long_digits_multiplication_searching.h  long_digits_multiplication_searching_in_any_base.cpp
src/stream/: Description.txt  TODO.txt  extenders.h  functors.h  initializer_list_iterator.h  light_stream.h  operations.h  producing_iterator.h  range.h  stream.h  stream_base.h  stream_basic.h  stream_common.h  stream_extended.h  stream_paired.h  terminated_operations.h  to_pair.h  unterminated_operations.h
src/stream/fast_stream/: stream.h  stream_base.h  stream_extended.h
src/stream/fast_stream/operators/: filter.h  get.h  operators.h  skip.h  sum.h  tools.h
src/stream/operations/: group_by_vector.h  operations.h  terminated_operations.h  tools.h  unterminated_operations.h
src/stream/operators/: cast.h  distinct.h  filter.h  get.h  group.h  group_by_vector.h  map.h  max.h  min.h  nth.h  operators.h  or_else.h  print_to.h  reduce.h  skip.h  split.h  sum.h  terminated_operators.h  to_pair.h  to_vector.h  tools.h  tupled.h  ungroup_by_bit.h  unterminated_operators.h
src/stream/short_stream/: stream.h  stream_base.h  stream_extended.h
src/stream/short_stream/operators/: filter.h  get.h  operators.h  sum.h  tools.h
src/stream/stream_v1/: range.h  stream.h  stream_basic.h  stream_extended.h
src/stream/stream_v1/operators/: group_by_vector.h  operators.h  terminated_operators.h  tools.h  ungroup_by_bit.h  unterminated_operators.h
src/stream_v2/: stream.h  stream_basic.h  stream_extended.h
src/stream_v2/operators/: filter.h  get.h  group_by_vector.h  map.h  nth.h  operators.h  print_to.h  reduce.h  skip.h  sum.h  to_vector.h  tools.h  ungroup_by_bit.h
tests/: CMakeLists.txt  forward_list_tests.cpp  stream_tests.cpp  tests.cpp
tests/common_interfaces/: algebra_tests.cpp
tests/containers/: bit_vector_benchmark.cpp  nested_iterator_tests.cpp  nested_iterator_tests.h
tests/extra_tools/: extra_tools_tests.cpp  extra_tools_tests.h  maths_tools_tests.cpp  producing_iterator_tests.cpp
tests/hash_map/: hash_map_test.h  hash_map_tests.cpp
tests/intervals/: interval_tests.cpp
tests/long_numbers/: big_integer_tests.cpp  long_integer_decimal_tests.cpp  long_integer_tests.cpp  long_integer_vs_long_unsigned_tests.cpp  long_numbers_benchmark_tests.cpp  long_numbers_tests.cpp  long_unsigned_tests.cpp
tests/maths/: fixed_precision_number_tests.cpp
tests/stream/: cast_tests.cpp  filter_tests.cpp  group_tests.cpp  initializer_list_iterator_tests.cpp  max_min_tests.cpp  max_tests.cpp  nop_tests.cpp  nth_tests.cpp  paired_stream_tests.cpp  producing_iterator_tests.cpp  reduce_tests.cpp  split_tests.cpp  stream_test.h  stream_tests.cpp  tupled_stream_tests.cpp
tests/stream/benchmarks/: stream_vs_fast_stream.cpp
tests/stream_v2/: stream_v2_tests.cpp
